--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -70,6 +70,29 @@
     width:360px;
     padding: 0 0 0 2rem;
 }
+.favoritesBtn{
+    background-color: var(--input);
+    color:var(--text);
+    border-radius: 0.5rem;
+    border:0;
+    box-shadow: 0 0 8px rgba(41, 43, 46, .2);
+    height:100%;
+    width:80px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+.favoritesBtn:hover{
+    scale:1.05;
+    transition: 0.3s ease;
+}
+
+.btnClicked{
+    box-shadow:inset 0 0 8px rgba(41, 43, 46, .2); 
+}
+.btnClicked:hover{
+    scale:1.00;
+}
+
 .selectDiv{
     display:flex;
     justify-content: space-around;
