--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -163,12 +163,12 @@
 }
 
 .SongExt{
-    z-index: 11;
+    position:relative;
+    z-index:11;
     width:80%;
     margin-left:2rem;
     display:flex;
     flex-direction: column;
-    background-color: var(--background);
 }
 .backArrowDiv{
     position:relative;
@@ -192,6 +192,10 @@
 .innerSongExt{
     display:grid;
     grid-template-columns: 1fr 1fr;
+    background-color: var(--elements);
+    box-shadow: 0px 1px 50px -10px rgba(0,0,0,0.75);
+    border-radius: 0.5rem;
+    overflow: hidden;
 }
 .SongExt .imgDiv{
     /* width:40%; */
@@ -203,7 +207,7 @@
     }
 }
 .SongExt .infoDiv{
-    padding:0 1rem 1rem 1rem;
+    padding:1rem 1rem 1rem 1rem;
     display:grid;
     grid-template-rows:2fr 1fr;
     z-index: 10;
