--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -112,6 +112,20 @@
     height:100%;
     width:60px;
 }
+.hidden{
+    display:none;
+}
+.artistSelect{
+    text-align: center;
+    background-color: var(--input);
+    color:var(--text);
+    border-radius: 0.5rem;
+    border:0;
+    box-shadow: 0 0 8px rgba(41, 43, 46, .2);
+    margin-left: 1rem;
+    height:100%;
+    width:80px;
+}
 
 .Song {
     position:relative;
