--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -5,6 +5,7 @@
 #songsContainer{
     display:grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    /* justify-content: center; */
     gap: 10px;
     background-color: var(--background);
     color: var(--text);
@@ -45,6 +46,8 @@
     justify-content: space-around;
     background-color: var(--background);
     margin: 2rem 0 1rem 0;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
 }
 .searchField{
     position:relative;
@@ -133,7 +136,12 @@
     color:var(--text);
     border-radius: 0.5rem;
     border:0;
+    padding:0.3rem;
     box-shadow: 0 0 8px rgba(41, 43, 46, .2);
+    width:20rem;
+    margin:auto;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 .SongsPaginationBar button{/*need to fix coloring scheme, including light/dark mode*/
     margin: 0 0.2rem 0 0.2rem;
@@ -145,7 +153,12 @@
     scale:1.05;
     transition: 0.3s ease;
 }
+
+.marked{
+    background-color: red;
+}
 .Song {
+    justify-self: center;
     position:relative;
     border-radius:5%;
     background-color: var(--elements);
@@ -266,6 +279,9 @@
         padding:0;
     }
     #songsApp #searchInput{
+        width:100%;
+    }
+    #songsApp .searchField{
         width:80%;
     }
     /* #songsApp .searchBar{
