--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
 * {
   margin:0;
   padding:0;
@@ -6,19 +8,16 @@
 
 html, body {
   height: 100%;
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
-  font-family: cursive;
+  font-family: "Lora", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 #root .App {
   min-height: 100vh;
 }
-:root {
-  --light-mode-input: 0, 0%, 52%; /* DELETE */
-}
+
 input, select {
-  font-family: cursive;
-  /* font-weight: bold; */
+  font-family: "Lora", serif;
 }
 
 [data-theme="dark"] {
@@ -42,19 +41,13 @@ input, select {
   --text: hsl(200, 15%, 8%); /* 90% black */
   --shadow: 1px 1px 15px rgb(211, 209, 209);
   --input: #faedcd;
-  /* --link-color: #0b525b;
-  --link-hover: #127d8b; */
   --link-color: #067a89;
   --link-hover: #12b0c5;
   --header-background-animation: linear-gradient(270deg, #fce4ec, #f8bbd0, #ffccbc, #fff9c4);
   --page-button: hsl(27, 87%, 68%);
   --page-button-hover: hsl(27, 87%, 68%,0.2);
 
-  /* --arrowBackground:rgba(255, 196, 0, 0.534); */
 }
-
-/* dark-wave: #243B55 #3A6073 */
-/* light-wave:  #ffbe9e #FF7736 */
 
 img, svg {
   display: block;
